validation and error handling added
